Testing background issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ a{
 
 
 @media screen and (max-width: 500px) {
-    html {
+    body {
         -moz-background-size: auto;
         -webkit-background-size: auto;
         background-attachment: scroll;
